[gd_scene load_steps=2 format=2]

[ext_resource path="res://Prefabs/ItemTemplate/RuleItem.gd" type="Script" id=1]

[node name="RuleItem" type="Panel"]
margin_right = 304.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 88.0
margin_bottom = 36.0

[node name="CheckBox-L" type="CheckBox" parent="."]
margin_left = 96.0
margin_top = 8.0
margin_right = 131.0
margin_bottom = 32.0
text = "L"

[node name="CheckBox-R" type="CheckBox" parent="."]
margin_left = 131.0
margin_top = 8.0
margin_right = 167.0
margin_bottom = 32.0
text = "R"

[node name="CheckBox-U" type="CheckBox" parent="."]
margin_left = 168.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 32.0
text = "U"

[node name="CheckBox-D" type="CheckBox" parent="."]
modulate = Color( 0.231373, 0.231373, 0.231373, 1 )
margin_left = 208.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 32.0
text = "D"

[node name="Button" type="Button" parent="."]
margin_left = 277.0
margin_top = 10.0
margin_right = 297.0
margin_bottom = 30.0
text = "X"

[connection signal="pressed" from="CheckBox-L" to="." method="_on_CheckBoxL_pressed"]
[connection signal="pressed" from="CheckBox-R" to="." method="_on_CheckBoxR_pressed"]
[connection signal="pressed" from="CheckBox-U" to="." method="_on_CheckBoxU_pressed"]
[connection signal="pressed" from="CheckBox-D" to="." method="_on_CheckBoxD_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
